[tool.poetry]
name = "dagster-performance-check"
version = "0.1.0"
description = ""
authors = ["yuxt <yuxt@live.com>"]
readme = "README.md"
packages = [{include = "dagster_performance_check"}]

[tool.poetry.dependencies]
python = "^3.9"
dagster = "^1.3.5"
dagit = "^1.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
